Fix odd spacing between text and arrow

--- a/src/sass/components/_p150-object-lightbox.scss
+++ b/src/sass/components/_p150-object-lightbox.scss
@@ -148,6 +148,7 @@
 
     &__next-icon {
         margin-left: 10px;
+        text-align: left !important;
     }
 
     @include breakpoint(sm) {
